--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cookie": "^0.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.4",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
