--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "cookie": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
